# pyside-practice

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  pyproject.toml  tasks.py
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  usage.rst
pyside_practice/: __init__.py  bokeh_test.py  cli.py  file_explorer_button.py  main.py  main.ui  main_window.py  new_window.py  plot_bokeh.py  pyside_practice.py
pyside_practice/modules/: app_functions.py  ui_main.py
tests/: __init__.py  test_pyside_practice.py
