[tool]
[tool.poetry]
name = "pyside_practice"
version = "0.1.0"
homepage = "https://github.com/seokwangwoo/pyside_practice"
description = "Top-level package for Pyside Practice."
authors = ["Kwangwoo Seo <seokwangwoo@gmail.com>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "pyside_practice" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = "*"
pyside6 = "^6.7.1"
bokeh = "^3.4.1"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = ">=7.2.0"
sphinx = ">=5.3.0"
black = "*"
sphinx_rtd_theme = "*"

[tool.poetry.scripts]
pyside_practice = 'pyside_practice.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
